// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: false and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: true and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: false, dismissButton: true and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: false and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: false and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: true and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: false, fullscreen: true, dismissButton: true and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 0 !important;
  visibility: hidden !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(.9,.9,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: { base: true, xs: false, s: true, m: false, l: true, xl: false }, dismissButton: true and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:480px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

@media(min-width:760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 !important;
  }
}

@media(min-width:1000px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

@media(min-width:1300px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 !important;
  }
}

@media(min-width:1760px) {
  ::slotted(.stretch-to-full-modal-width:first-child) {
    border-radius: 8px 8px 0 0 !important;
  }
  ::slotted(.stretch-to-full-modal-width:last-child) {
    border-radius: 0 0 8px 8px !important;
  }
}

.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:480px) {
  .root {
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    border-radius: 8px;
  }
  .root:focus::before {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(min-width:760px) {
  .root {
    min-width: 100%;
    max-width: none;
    min-height: 100%;
    margin: 0;
    border-radius: 0;
  }
  .root:focus::before {
    border-radius: 0;
    border-color: #010205;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

@media(min-width:1000px) {
  .root {
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    border-radius: 8px;
  }
  .root:focus::before {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(min-width:1300px) {
  .root {
    min-width: 100%;
    max-width: none;
    min-height: 100%;
    margin: 0;
    border-radius: 0;
  }
  .root:focus::before {
    border-radius: 0;
    border-color: #010205;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

@media(min-width:1760px) {
  .root {
    margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
    min-width: 276px;
    max-width: 1535.5px;
    min-height: auto;
    border-radius: 8px;
  }
  .root:focus::before {
    border-radius: 12px;
    border-color: #FBFCFF;
    top: -4px;
    left: -4px;
    right: -4px;
    bottom: -4px;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: false and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: true and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: false, dismissButton: true and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 8px 8px 0 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 0 8px 8px !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 276px;
  max-width: 1535.5px;
  min-height: auto;
  margin: clamp(16px, 7vh, 192px) max(22px, 10.625vw - 12px);
  border-radius: 8px;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 12px;
  border-color: #FBFCFF;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: min(192px, 10vh) max(22px, 10.625vw - 12px);
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: false and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: false and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: true and hasHeader: false 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  margin-top: -2rem !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;

exports[`getComponentCss() should return correct css for open: true, fullscreen: true, dismissButton: true and hasHeader: true 1`] = `
":host {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 99999 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  opacity: 1 !important;
  visibility: inherit !important;
  overflow-y: auto;
}
:host([hidden]) {
  display: none !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(1, 2, 5, 0.67) !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  pointer-events: none !important;
}
::slotted(.stretch-to-full-modal-width) {
  width: calc(100% + 64px) !important;
  margin: 0 -32px !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  margin-bottom: -32px !important;
}
::slotted(.stretch-to-full-modal-width:first-child) {
  border-radius: 0 !important;
}
::slotted(.stretch-to-full-modal-width:last-child) {
  border-radius: 0 !important;
}
h2 {
  font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.root {
  position: relative;
  box-sizing: border-box;
  transition: transform .6s cubic-bezier(.16,1,.3,1);
  transform: scale3d(1,1,1);
  padding: 2rem 32px 32px 32px;
  background: #FFF;
  outline: 0;
  min-width: 100%;
  max-width: none;
  min-height: 100%;
  margin: 0;
  border-radius: 0;
}
.root:focus::before {
  content: "";
  position: fixed;
  border: 2px solid;
  pointer-events: none;
  border-radius: 0;
  border-color: #010205;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.header {
  padding: 0 0 8px;
}
.dismiss {
  position: absolute;
  top: 8px;
  right: 8px;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
@media(min-width:1760px) {
  .root {
    margin: 0;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background: transparent;
    border-color: transparent;
  }
}
"
`;
